chaned one LOGO

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!-- <img class="cheems" src="https://media.giphy.com/media/PdOMR5d20WwCwpSvag/giphy.gif" alt=""> -->
                 <!-- <img class="second-skill" src="https://cdn-icons-png.flaticon.com/128/674/674440.png" alt="Gamepad-img"> -->
                 <!-- <img class="second-skill" src="https://media.giphy.com/media/IzjIew8jX5ndx7fYiT/giphy.gif" alt=""> -->
-                <img class="second-skill" src="https://media4.giphy.com/media/nhFUn8Hg3BrhMDKAQx/200w.webp?cid=ecf05e475lmvzwdkqp7263lsmu2wio57fujsnh4pyazd4q4h&rid=200w.webp&ct=s" alt="">
+                <img class="second-skill" src="https://media4.giphy.com/media/nhFUn8Hg3BrhMDKAQx/200w.webp?cid=ecf05e475lmvzwdkqp7263lsmu2wio57fujsnh4pyazd4q4h&rid=200w.webp&ct=s" alt="Gamepad-img">
                 <!-- <img class="second-skill" src="https://media.giphy.com/media/MAufS768X0Vwc4hZyz/giphy.gif" alt="Gamepad-img"> -->
                 <h3>Gaming and Development</h3>
                 <p>Like most of us i also love to do gaming . From very beginning i want to make my own game and then want play it in AR/VR, so i will learn Game-development and the pospects of making a game in META .</p>
